add info to calendar section

--- a/index.html
+++ b/index.html
@@ -182,167 +182,162 @@
         </section>
 
         <section id="calendar" class="container-full" role="group" aria-labelledby="calendar-heading">
-            <h2>Расписание</h2>
+            <h2 id="calendar-heading">Расписание</h2>
             <div class="spacer"></div>
             <div class="calendar-container">
                 <p class="bigger-text">Пробный урок — отличная возможность выбрать свой стиль и начать
                     танцевать.<br>Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть
                     изменения.</p>
-                <!-- Monday -->
                 <div class="calendar-cards">
                     <div class="calendar-card">
-                        <h3>Понедельник</h3>
-                        <div class="calendar-location">
-                            <a href="https://yandex.by/maps/-/CDq7509P" target="_blank">
-                                ул. Мележа 1, зал 308
-                            </a>
+                        <h3 class="day-heading">Понедельник</h3>
+                        <div class="location-group">
+                            <h4 class="location-heading">Ул. Тимирязева, 9/10</h4>
+                            <span class="teacher-name">Грейсьер</span>
+                            <div class="class-entry">
+                                <span class="time">17:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">сальса Куба</span>
+                            </div>
                         </div>
-                        <ul class="calendar-classes" role="list">
-                            <li role="listitem">
-                                <span class="time">18:00 - 19:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">19:00 - 20:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">20:00 - 21:00</span>
-                                <span class="class-name">Salsa</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">21:00 - 22:00</span>
-                                <span class="class-name">Bachata</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                        </ul>
+                        <div class="location-group">
+                            <h4 class="location-heading">Пр-т Рокоссовского, 44/2</h4>
+                            <span class="teacher-name">Анжель</span>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                        </div>
                     </div>
-                    <!-- Tuesday -->
                     <div class="calendar-card">
-                        <h3>Вторник</h3>
-                        <div class="calendar-location">
-                            <a href="https://yandex.by/maps/-/CDq7509P" target="_blank">
-                                ул. Мележа 1, зал 308
-                            </a>
+                        <h3 class="day-heading">Вторник</h3>
+                        <div class="location-group">
+                            <h4 class="location-heading">Ул. Тимирязева, 9/10</h4>
+                            <span class="teacher-name">Грейсьер</span>
+                            <div class="class-entry">
+                                <span class="time">18:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">парная бачата</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
                         </div>
-                        <ul class="calendar-classes" role="list">
-                            <li role="listitem">
-                                <span class="time">18:00 - 19:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">19:00 - 20:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">20:00 - 21:00</span>
-                                <span class="class-name">Salsa</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">21:00 - 22:00</span>
-                                <span class="class-name">Bachata</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                        </ul>
+                        <div class="location-group">
+                            <h4 class="location-heading">Ул. Матусевича, 35Г</h4>
+                            <span class="teacher-name">Анжель</span>
+                            <div class="class-entry">
+                                <span class="time">18:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">реггетон</span>
+                            </div>
+                        </div>
                     </div>
-                    <!-- Wednesday -->
                     <div class="calendar-card">
-                        <h3>Среда</h3>
-                        <div class="calendar-location">
-                            <a href="https://yandex.by/maps/-/CDq7509P" target="_blank">
-                                ул. Мележа 1, зал 308
-                            </a>
+                        <h3 class="day-heading">Среда</h3>
+                        <div class="location-group">
+                            <h4 class="location-heading">Пр-т Рокоссовского, 44/2</h4>
+                            <span class="teacher-name">Грейсьер</span>
+                            <div class="class-entry">
+                                <span class="time">18:00</span>
+                                <span class="class-name">сальса Куба</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
                         </div>
-                        <ul class="calendar-classes" role="list">
-                            <li role="listitem">
-                                <span class="time">18:00 - 19:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">19:00 - 20:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">20:00 - 21:00</span>
-                                <span class="class-name">Salsa</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">21:00 - 22:00</span>
-                                <span class="class-name">Bachata</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                        </ul>
                     </div>
-                    <!-- Thursday -->
                     <div class="calendar-card">
-                        <h3>Четверг</h3>
-                        <div class="calendar-location">
-                            <a href="https://yandex.by/maps/-/CDq7509P" target="_blank">
-                                ул. Мележа 1, зал 308
-                            </a>
+                        <h3 class="day-heading">Четверг</h3>
+                        <div class="location-group">
+                            <h4 class="location-heading">Ул. Тимирязева, 9/10</h4>
+                            <span class="teacher-name">Грейсьер</span>
+                            <div class="class-entry">
+                                <span class="time">18:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
                         </div>
-                        <ul class="calendar-classes" role="list">
-                            <li role="listitem">
-                                <span class="time">18:00 - 19:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">19:00 - 20:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">20:00 - 21:00</span>
-                                <span class="class-name">Salsa</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">21:00 - 22:00</span>
-                                <span class="class-name">Bachata</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                        </ul>
+                        <div class="location-group">
+                            <h4 class="location-heading">Ул. Матусевича, 35Г</h4>
+                            <span class="teacher-name">Анжель</span>
+                            <div class="class-entry">
+                                <span class="time">18:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">реггетон</span>
+                            </div>
+                        </div>
                     </div>
-                    <!-- Friday -->
                     <div class="calendar-card">
-                        <h3>Пятница</h3>
-                        <div class="calendar-location">
-                            <a href="https://yandex.by/maps/-/CDq7509P" target="_blank">
-                                ул. Мележа 1, зал 308
-                            </a>
+                        <h3 class="day-heading">Пятница</h3>
+                        <div class="location-group">
+                            <h4 class="location-heading">Ул. Тимирязева, 9/10</h4>
+                            <span class="teacher-name">Грейсьер</span>
+                            <div class="class-entry">
+                                <span class="time">18:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">19:00</span>
+                                <span class="class-name">сальса Куба продвинутая группа</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">20:00</span>
+                                <span class="class-name">сальса Куба начинающая группа</span>
+                            </div>
                         </div>
-                        <ul class="calendar-classes" role="list">
-                            <li role="listitem">
-                                <span class="time">18:00 - 19:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">19:00 - 20:00</span>
-                                <span class="class-name">Lady's Style</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">20:00 - 21:00</span>
-                                <span class="class-name">Salsa</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                            <li role="listitem">
-                                <span class="time">21:00 - 22:00</span>
-                                <span class="class-name">Bachata</span>
-                                <span class="teacher-name">Грейс</span>
-                            </li>
-                        </ul>
+                    </div>
+                    <div class="calendar-card">
+                        <h3 class="day-heading">Суббота</h3>
+                        <div class="location-group">
+                            <h4 class="location-heading">Пр-т Рокоссовского, 44/2</h4>
+                            <span class="teacher-name">Грейсьер</span>
+                            <div class="class-entry">
+                                <span class="time">11:00</span>
+                                <span class="class-name">латино микс</span>
+                            </div>
+                            <div class="class-entry">
+                                <span class="time">12:00</span>
+                                <span class="class-name">бачата соло</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
