remove clickable footer logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar" role="navigation">
             <a href="#home">
-                <img src="img/logo.svg" alt="logo" class="logo">
+                <img src="img/logo.svg" alt="logo" id="logo-header">
             </a>
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#teachers">Преподаватели</a></li>
@@ -352,7 +352,9 @@
                     src="https://www.youtube.com/embed/4m6O2EXk2hE?si=ZgpkAuLwD4q6Ah2_" title="YouTube video player"
                     frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
                     loading="lazy"></iframe> -->
-                <lite-youtube videoid="4m6O2EXk2hE" style="background-image: url('img/festival-placeholder.webp');"
+                <lite-youtube videoid="4m6O2EXk2hE"
+                    title="Фестиваль латиноамериканской культуры в Минске 13-22 октября 2022г"
+                    style="background-image: url('img/festival-placeholder.webp');"
                     aria-label="Участие в фестивале латиноамериканской культуры в Минске">
                     <a href="https://www.youtube.com/watch?v=4m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
                         <span class="lyt-visually-hidden">Play Video: Участие в фестивале латиноамериканской культуры в
@@ -458,7 +460,7 @@
                 <p>© 2025 La Casa de Grei. Все права защищены.</p>
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank">Edgar
                             R.N</a></em></p>
-                <a href="/"><img src="img/logo.svg" alt="LOGO"></a>
+                <img src="img/logo.svg" alt="logo" id="logo-footer">
             </div>
             <div class="legal">
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
