reduce a the shadow for mobile

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 </li>
                 <li role="listitem">
                     <h3>В группы парных занятий нужно приходить с парой?</h3>
-                    <p>Да,<br>нужно приходжить с парой или записаться в лист ожидания пары.</p>
+                    <p>Да,<br>нужно приходить с парой или записаться в лист ожидания пары.</p>
                 </li>
                 <li role="listitem">
                     <h3>В чем тренироваться?</h3>
