--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/logo.svg">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/logo.svg" type="image/svg+xml">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="src/lite-yt-embed.css">
     <script src="src/lite-yt-embed.js" defer></script>
