--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/logo.svg" type="image/svg+xml">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="src/lite-yt-embed.css">
@@ -22,7 +21,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar" role="navigation">
             <a href="#home">
-                <img src="img/logo.svg" alt="logo" id="logo-header">
+                <img src="img/logo-content.svg" alt="logo" id="logo-header">
             </a>
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#teachers">Преподаватели</a></li>
@@ -461,7 +460,7 @@
                 <p>© 2025 La Casa de Grei. Все права защищены.</p>
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank">Edgar
                             R.N</a></em></p>
-                <img src="img/logo.svg" alt="logo" id="logo-footer">
+                <img src="img/logo-content.svg" alt="logo" id="logo-footer">
             </div>
             <div class="legal">
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
