increase speed contact button animation

--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
         <button class="floating-contact-button" role="button">
             <span class="contact-text">Связаться с нами</span>
             <span class="contact-text-short">Связаться</span>
-            <img class="contact-icon" src="img/contacts-display.svg" alt="Contact Icon">
-            <ul class="contact-menu" role="dialog" aria-modal="true">
-                <li role="listitem"><a href="https://t.me/unknown" target="_blank"><img src="img/telegram.svg"
-                            alt="Telegram Icon">Телеграм</a></li>
-                <li role="listitem"><a href="viber://chat?number=YOUR_VIBER_NUMBER" target="_blank"><img
-                            src="img/viber.svg" alt="Viber Icon">Вайбер</a></li>
-                <li role="listitem"><a href="tel:+xxxxxxxxxx"><img src="img/call.svg" alt="Phone Icon">Телефон</a></li>
-            </ul>
+            <img class="contact-icon" src="img/contacts-display.svg" alt="Open">
+            <div class="contact-menu-container">
+                <ul class="contact-menu" role="dialog" aria-modal="true">
+                    <li role="listitem"><a href="https://t.me/unknown" target="_blank"><img src="img/telegram.svg"
+                                alt="Telegram Icon">Телеграм</a></li>
+                    <li role="listitem"><a href="viber://chat?number=YOUR_VIBER_NUMBER" target="_blank"><img
+                                src="img/viber.svg" alt="Viber Icon">Вайбер</a></li>
+                    <li role="listitem"><a href="tel:+xxxxxxxxxx"><img src="img/call.svg" alt="Phone Icon">Телефон</a>
+                    </li>
+                </ul>
+            </div>
         </button>
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
