--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
             <img class="contact-icon" src="img/contacts-display.svg" alt="Open">
             <div class="contact-menu-container">
                 <ul class="contact-menu" role="dialog" aria-modal="true">
-                    <li role="listitem"><a href="https://t.me/unknown" target="_blank"><img src="img/telegram.svg"
-                                alt="Telegram Icon">Телеграм</a></li>
-                    <li role="listitem"><a href="viber://chat?number=YOUR_VIBER_NUMBER" target="_blank"><img
+                    <li role="listitem"><a href="https://t.me/machadolopezirina" target="_blank"><img
+                                src="img/telegram.svg" alt="Telegram Icon">Телеграм</a></li>
+                    <li role="listitem"><a href="viber://chat?number=%2B375293575258" target="_blank"><img
                                 src="img/viber.svg" alt="Viber Icon">Вайбер</a></li>
-                    <li role="listitem"><a href="tel:+xxxxxxxxxx"><img src="img/call.svg" alt="Phone Icon">Телефон</a>
+                    <li role="listitem"><a href="tel:+375293575258"><img src="img/call.svg" alt="Phone Icon">Телефон</a>
                     </li>
                 </ul>
             </div>
         </button>
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
-            data-bg-desktop="img/home-desktop.webp" data-bg-mobile="img/home-mobile.webp">
+            data-bg-desktop="img/home-mobile.webp" data-bg-mobile="img/home-mobile.webp">
             <div class="spacer"></div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
@@ -78,7 +78,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/teacher-grei.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
+                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
                     </div>
                     <div class="teacher-info-1">
                         <h3>Грейсьер Мачадо Лопес</h3>
@@ -92,7 +92,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/teacher-anel.webp" alt="Инструктор по танцам Аньель" loading="lazy">
+                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy">
                     </div>
                     <div class="teacher-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
@@ -414,10 +414,7 @@
                 <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас.
                     Мы действительно любим общаться с нашими клиентами.</p>
                 <p>
-                    <strong>Телефон:</strong> <a href="tel:+375291234567">+375 (29) 123-45-67</a>
-                </p>
-                <p>
-                    <strong>Email:</strong> <a href="mailto:info@lacasadegrei.by">info@lacasadegrei.by</a>
+                    <strong>Email:</strong> <a href="mailto:Lacasadegrei@mail.ru">Lacasadegrei@mail.ru</a>
                 </p>
                 <div class="social-media">
                     <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank"><img
