fix logo flashing at loading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar" role="navigation">
             <a href="#home">
-                <img src="img/logo-content.svg" alt="logo" id="logo-header">
+                <div class="image-placeholder" aria-label="Logo" role="img">
+                    <img src="img/logo-content.svg" alt="logo" id="logo-header">
+                </div>
             </a>
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#teachers">Преподаватели</a></li>
