--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <img class="contact-icon" src="img/contacts-display.svg" alt="Open">
             <div class="contact-menu-container">
                 <ul class="contact-menu" role="dialog" aria-modal="true">
-                    <li role="listitem"><a href="https://t.me/machadolopezirina" target="_blank"><img
+                    <li role="listitem"><a href="https://t.me/machadolopezirina" target="_blank" rel="noopener"><img
                                 src="img/telegram.svg" alt="Telegram Icon">Телеграм</a></li>
-                    <li role="listitem"><a href="viber://chat?number=%2B375293575258" target="_blank"><img
-                                src="img/viber.svg" alt="Viber Icon">Вайбер</a></li>
+                    <li role="listitem"><a href="viber://chat?number=%2B375293575258" target="_blank"
+                            rel="noopener"><img src="img/viber.svg" alt="Viber Icon">Вайбер</a></li>
                     <li role="listitem"><a href="tel:+375293575258"><img src="img/call.svg" alt="Phone Icon">Телефон</a>
                     </li>
                 </ul>
@@ -419,13 +419,14 @@
                     <strong>Email:</strong> <a href="mailto:Lacasadegrei@mail.ru">Lacasadegrei@mail.ru</a>
                 </p>
                 <div class="social-media">
-                    <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank"><img
+                    <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank" rel="noopener"><img
                             src="img/facebook.svg" alt="Facebook" loading="lazy"></a>
-                    <a href="https://www.instagram.com/la_casa_de_grei/" target="_blank"><img src="img/instagram.svg"
-                            alt="Instagram" loading="lazy"></a>
-                    <a href="https://vk.com/greisier" target="_blank"><img src="img/vk.svg" alt="VK" loading="lazy"></a>
-                    <a href="https://www.youtube.com/@lacasadegrei2151" target="_blank"><img src="img/youtube.svg"
-                            alt="Youtube" loading="lazy"></a>
+                    <a href="https://www.instagram.com/la_casa_de_grei/" target="_blank" rel="noopener"><img
+                            src="img/instagram.svg" alt="Instagram" loading="lazy"></a>
+                    <a href="https://vk.com/greisier" target="_blank" rel="noopener"><img src="img/vk.svg" alt="VK"
+                            loading="lazy"></a>
+                    <a href="https://www.youtube.com/@lacasadegrei2151" target="_blank" rel="noopener"><img
+                            src="img/youtube.svg" alt="Youtube" loading="lazy"></a>
                 </div>
                 <h3>Три зала в Минске:</h3>
                 <ol class="contact-saloon" role="list">
@@ -438,13 +439,14 @@
                         <img src="img/map.webp" alt="Расположение танцевальных студий" usemap="#map-directions"
                             loading="lazy">
                         <map name="map-directions">
-                            <area target="_blank" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
+                            <area target="_blank" rel="noopener" alt="ул. Матусевича, 35г" title="ул. Матусевича, 35г"
                                 href="https://yandex.by/maps/?rtext=~ул.%20Матусевича%2C%2035г&rtt=auto"
                                 coords="142,85,385,184" shape="rect" data-original-coords="142,85,385,184">
-                            <area target="_blank" alt="пр-т Рокоссовского, 44к2" title="пр-т Рокоссовского, 44к2"
+                            <area target="_blank" rel="noopener" alt="пр-т Рокоссовского, 44к2"
+                                title="пр-т Рокоссовского, 44к2"
                                 href="https://yandex.by/maps/?rtext=~пр-т%20Рокоссовского%2C%2044к2&rtt=auto"
                                 coords="1113,689,1385,797" shape="rect" data-original-coords="1113,689,1385,797">
-                            <area target="_blank" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
+                            <area target="_blank" rel="noopener" alt="ул. Тимирязева, 9к10" title="ул. Тимирязева, 9к10"
                                 href="https://yandex.by/maps/?rtext=~ул.%20Тимирязева%2C%209к10&rtt=auto"
                                 coords="665,188,916,289" shape="rect" data-original-coords="665,188,916,289">
                         </map>
@@ -460,7 +462,8 @@
         <div class="container-full">
             <div class="copyright">
                 <p>© 2025 La Casa de Grei. Все права защищены.</p>
-                <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank">Edgar
+                <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
+                            rel="noopener">Edgar
                             R.N</a></em></p>
                 <img src="img/logo-content.svg" alt="logo" id="logo-footer">
             </div>
