fix desktop hero image not showing on position

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </button>
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
-            data-bg-desktop="img/home-mobile.webp" data-bg-mobile="img/home-mobile.webp">
+            data-bg-desktop="img/home-desktop.webp" data-bg-mobile="img/home-mobile.webp">
             <div class="spacer"></div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
