fix styling for better consistency

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
                 <p>Школа латиноамериканских танцев</p>
-                <p>У танца нет возраста. У танца есть душа и она всегда молода.</p>
+                <p>У танца нет возраста. У танца есть душа и она всегда молода</p>
             </div>
             <div class="spacer"></div>
             <div class="scroll-down">
@@ -149,7 +149,8 @@
                         <ul class="features" role="list">
                             <li class="available" role="listitem"><span>✔</span>16 занятий</li>
                             <li class="available" role="listitem"><span>✔</span>действует в течение 60 дней</li>
-                            <li class="available" role="listitem"><span>✔</span>включена неделя заморозки</li>
+                            <li class="available" role="listitem"><span>✔</span>включена <strong>одна неделя</strong>
+                                заморозки</li>
                         </ul>
                     </div>
                     <div class="pricing-card">
@@ -162,7 +163,8 @@
                         <ul class="features" role="list">
                             <li class="available" role="listitem"><span>✔</span>24 занятия</li>
                             <li class="available" role="listitem"><span>✔</span>действует в течение 90 дней</li>
-                            <li class="available" role="listitem"><span>✔</span>включена неделя заморозки</li>
+                            <li class="available" role="listitem"><span>✔</span>включены <strong>две недели</strong>
+                                заморозки</li>
                         </ul>
                     </div>
                 </div>
@@ -201,15 +203,16 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">17:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(I уровень)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">сальса Куба</span>
+                                <span class="class-name"><strong>сальса Куба</strong><br><em>(продвинутый
+                                        уровень)</em></span>
                             </div>
                         </div>
                         <div class="location-group">
@@ -217,11 +220,12 @@
                             <span class="teacher-name">Анжель</span>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный
+                                        уровень)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em> (начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -232,15 +236,17 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
+                                        уровень)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">парная бачата</span>
+                                <span class="class-name"><strong>парная бачата</strong></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>
+                                        (универсальный)</em></span>
                             </div>
                         </div>
                         <div class="location-group">
@@ -248,15 +254,15 @@
                             <span class="teacher-name">Анжель</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">реггетон</span>
+                                <span class="class-name"><strong>реггетон</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -267,15 +273,16 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name">сальса Куба</span>
+                                <span class="class-name"><strong>сальса Куба</strong><br><em>(начинающий)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
+                                        уровень)</em></span>
                             </div>
                         </div>
                     </div>
@@ -286,11 +293,12 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
+                                        уровень)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
                             </div>
                         </div>
                         <div class="location-group">
@@ -298,15 +306,15 @@
                             <span class="teacher-name">Анжель</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">реггетон</span>
+                                <span class="class-name"><strong>реггетон</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -317,15 +325,16 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающие и I
+                                        уровень)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
-                                <span class="class-name">сальса Куба продвинутая группа</span>
+                                <span class="class-name"><strong>сальса Куба</strong><br><em>(продвинутый)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name">сальса Куба начинающая группа</span>
+                                <span class="class-name"><strong>сальса Куба</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
@@ -336,11 +345,12 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">11:00</span>
-                                <span class="class-name">латино микс</span>
+                                <span class="class-name"><strong>латино микс</strong><br><em>(универсальный)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">12:00</span>
-                                <span class="class-name">бачата соло</span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
+                                        уровень)</em></span>
                             </div>
                         </div>
                     </div>
@@ -413,10 +423,10 @@
             <h2>Контакты</h2>
             <div class="spacer"></div>
             <div class="contacts-container">
-                <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас.
+                <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас. <br>
                     Мы действительно любим общаться с нашими клиентами.</p>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:Lacasadegrei@mail.ru">Lacasadegrei@mail.ru</a>
+                    <strong>Email:</strong> <a href="mailto:lacasadegrei@mail.ru">lacasadegrei@mail.ru</a>
                 </p>
                 <div class="social-media">
                     <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank" rel="noopener"><img
